# a2a-agent-fetch

./: .gitignore  README.md
simple_a2a_agent/: example.env  pyproject.toml  setup_venv.sh
simple_a2a_agent/docs/: uagents-av-chat-task-response.md
simple_a2a_agent/examples/: test_a2a_client.py
simple_a2a_agent/simple_a2a_agent/: __init__.py  __main__.py  agentverse_task_result_patch.py  executor.py  planner_agent.py  weather_mcp.py
